# locust-test-gen

./: README.md  pyproject.toml  requirements.txt
app/: generator.py  main.py
tests/: test_generator.py
